<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/text_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_email"
            android:layout_alignStart="@+id/text_email"
            android:layout_marginBottom="6dp"
            android:ems="10"
            android:hint="@string/hint_mobile_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:ems="10"
            android:hint="@string/hint_email_optional"
            android:inputType="textEmailAddress"
            android:layout_above="@+id/new_password"
            android:layout_alignStart="@+id/new_password" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/confirm_password"
            android:layout_alignStart="@+id/confirm_password"
            android:layout_marginBottom="6dp"
            android:ems="10"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:ems="10"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:layout_above="@+id/button_sendpw"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/button_sendpw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/button_send" />

    </RelativeLayout>

</LinearLayout>