<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.theopsyphertxt.cyfapay.LoginActivity">
    <!--android:weightSum="1" -->

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/text_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/hint_mobile_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_login"
            android:layout_alignStart="@+id/text_contact"
            android:layout_marginBottom="17dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_PaynGo"
            android:layout_alignStart="@+id/text_password"
            android:layout_marginBottom="21dp"
            android:text="@string/button_log_in" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_login"
            android:layout_alignBottom="@+id/button_login"
            android:layout_alignEnd="@+id/text_password"
            android:text="@string/button_sign_up" />

        <TextView
            android:id="@+id/text_PaynGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_forgotPassword"
            android:layout_alignEnd="@+id/text_forgotPassword"
            android:layout_alignStart="@+id/text_forgotPassword"
            android:layout_marginBottom="18dp"
            android:layout_weight="0.07"
            android:text="@string/tbutton_payandgo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button_signup"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/button_login"
            android:layout_weight="0.07"
            android:text="@string/tbutton_forgot_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </RelativeLayout>
</LinearLayout>
